// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parse-dialog meets damaged input should record an unparseable file and read the rest 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Reading dialogs in <sandbox>/tree (Directory)",
    "Swept 2 files in <duration>, 1 unreadable, 0 archived",
    "Dialogs: 1 total, 0 with no phrases, 0 with a priority",
    "Phrases: 1 total, 0 links, 0 final, 0 without text, 0 outside a phrase list",
    "Largest dialog: ok with 1 phrases",
    "Encodings: windows-1251: 1",
    "Dialog elements:",
    "Phrase elements: text: 1",
    "Check 'dialog.read' is failed with 1 findings",
    "  [dialog.unreadable] dialogs_broken.xml: Parsing error: Failed to parse XML: the root node was opened but never closed",
    "Read 2 files, status: failed",
  ],
}
`;

exports[`parse-dialog meets damaged input should refuse a path that does not exist 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: No dialog files were read under <sandbox>/absent, status: skipped",
  ],
  "stdout": [
    "Reading dialogs in <sandbox>/absent (Directory)",
    "Swept 0 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 0 total, 0 with no phrases, 0 with a priority",
    "Phrases: 0 total, 0 links, 0 final, 0 without text, 0 outside a phrase list",
    "Encodings:",
    "Dialog elements:",
    "Phrase elements:",
  ],
}
`;

exports[`parse-dialog meets damaged input should refuse a tree holding no dialog files 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: No dialog files were read under <sandbox>/portions, status: skipped",
  ],
  "stdout": [
    "Reading dialogs in <sandbox>/portions (Directory)",
    "Swept 0 files in <duration>, 0 unreadable, 0 archived",
    "Dialogs: 0 total, 0 with no phrases, 0 with a priority",
    "Phrases: 0 total, 0 links, 0 final, 0 without text, 0 outside a phrase list",
    "Encodings:",
    "Dialog elements:",
    "Phrase elements:",
  ],
}
`;

exports[`parse-dialog meets damaged input should turn the same damage into a check failure under strict 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Check failed: 1 finding(s)",
  ],
  "stdout": [
    "Reading dialogs in <sandbox>/tree (Directory)",
    "Swept 2 files in <duration>, 1 unreadable, 0 archived",
    "Dialogs: 1 total, 0 with no phrases, 0 with a priority",
    "Phrases: 1 total, 0 links, 0 final, 0 without text, 0 outside a phrase list",
    "Largest dialog: ok with 1 phrases",
    "Encodings: windows-1251: 1",
    "Dialog elements:",
    "Phrase elements: text: 1",
    "Check 'dialog.read' is failed with 1 findings",
  ],
}
`;

exports[`parse-dialog meets damaged input should write nothing beyond the authored inputs 1`] = `
[
  {
    "path": "portions/info_test.xml",
    "sha256": "35fe44d16f9a628c3401d78ada35f3ec4d0c34364458a4d422e80fcd86707a58",
    "size": 28,
  },
  {
    "path": "tree/dialogs_broken.xml",
    "sha256": "2b64ac186b66aaa7296badc9399f10bfee6196e37c28fbb725d46f6294fce8e8",
    "size": 29,
  },
  {
    "path": "tree/dialogs_readable.xml",
    "sha256": "63bc518a43ac0c3660ab46fbfa6da560e07c007f08bd7c9d852fb86de1f55819",
    "size": 119,
  },
]
`;
